# egui-file-dialog

./: .gitattributes  .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml  publish.yml  rust.yml
examples/: EXAMPLES.md  README.md  custom-right-panel.rs  custom_filesystem.rs  custom_right_panel.rs  multi_selection.rs  multilingual.rs  multiple-actions.rs  multiple_actions.rs  persistence.rs  pick_directory.rs  pick_file.rs  pick_file_with_information_view.rs  sandbox.rs  select_file_with_information_view.rs
examples/custom-right-panel/: Cargo.toml
examples/custom-right-panel/src/: main.rs
examples/different_languages/: Cargo.toml  README.md
examples/multi_selection/: Cargo.toml  README.md
examples/multi_selection/src/: main.rs
examples/multilingual/: Cargo.toml  README.md
examples/multilingual/src/: main.rs
examples/multiple_actions/: Cargo.toml  README.md
examples/multiple_actions/src/: main.rs
examples/multiple_languages/: Cargo.toml  README.md
examples/persistence/: Cargo.toml  README.md
examples/persistence/src/: main.rs
examples/pick_directory/: Cargo.toml  README.md
examples/pick_file/: Cargo.toml
examples/sandbox/: Cargo.toml  README.md
examples/sandbox/src/: main.rs
examples/save_file/: Cargo.toml  README.md
examples/save_file/src/: main.rs
examples/select_directory/: Cargo.toml
examples/select_directory/src/: main.rs
examples/select_file/: Cargo.toml  README.md
examples/select_file/src/: main.rs
examples/select_file_with_information_panel/: Cargo.toml  README.md
examples/select_file_with_information_panel/src/: main.rs
examples/select_file_with_information_view/: Cargo.toml  README.md
examples/select_file_with_information_view/src/: main.rs
examples/select_file_with_metadata_view/: Cargo.toml  README.md
src/: config.rs  create_directory_dialog.rs  file_dialog.rs  file_explorer.rs  file_system.rs  information_panel.rs  lib.rs  ui.rs  utils.rs  virtual_fs.rs
src/config/: keybindings.rs  labels.rs  mod.rs
src/data/: directory_content.rs  disks.rs  information_panel.rs  meta_data.rs  mod.rs  user_directories.rs
src/file_dialog/: create_directory_dialog.rs  mod.rs
src/modals/: mod.rs  overwrite_file_modal.rs
