[workspace]
members = ["examples/*"]

[workspace.dependencies]
eframe = { version = "0.29.1", default-features = false, features = [
    "glow",
    "persistence",
] }

[package]
name = "egui-file-dialog"
description = "An easy-to-use file dialog for egui"
version = "0.7.0"
edition = "2021"
authors = ["fluxxcode"]
repository = "https://github.com/fluxxcode/egui-file-dialog"
homepage = "https://github.com/fluxxcode/egui-file-dialog"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.29.1", default-features = false }

# Used to fetch user folders
directories = "5.0"

# Used to fetch disks
sysinfo = { version = "0.32", default-features = false, features = ["disk"] }

# Used for persistent storage
serde = { version = "1", features = ["derive"], optional = true }

# Used to canonicalize paths
dunce = "1.0.5"

# Used for info panel
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "bmp"], optional = true }
image-meta = { version = "0.1.2",  optional = true }
chrono = { version = "0.4.38", optional = true }
kamadak-exif = "0.6.1"

[features]
default = ["serde", "default_fonts"]
serde = ["dep:serde"]
default_fonts = ["egui/default_fonts"]
info_panel = ["dep:chrono", "image", "image-meta"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
perf = { level = "warn", priority = 3 }
style = { level = "warn", priority = 4 }
unwrap_used = { level = "deny", priority = 5 }
expect_used = { level = "deny", priority = 6 }

# These lints might be useful in the future but are not enabled for now
struct_excessive_bools = { level = "allow", priority = 10 }
return_self_not_must_use = { level = "allow", priority = 11 }
must_use_candidate = { level = "allow", priority = 12 }
struct_field_names = { level = "allow", priority = 13 }
missing_fields_in_debug = { level = "allow", priority = 14 }
missing_errors_doc = { level = "allow", priority = 15 }
module_name_repetitions = { level = "allow", priority = 16 }