[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.25.0", default-features = false, features = ["glow"] }
egui-file-explorer = { version = "0.1.0", path = "../../"}
