[package]
name = "select_file_with_information_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { workspace = true }
egui_extras = { version = "0.29", features = ["all_loaders"] }
image = { version = "0.25.5", features = ["bmp", "jpeg", "gif", "png", "tiff", "rayon"] }
egui-file-dialog = { path = "../../", features = ["metadata_view"] }

[package.metadata.cargo-machete]
ignored = ["image"]